# eth-ccd-bridge

./: .gitignore  README.md
.github/workflows/: ci.yaml  concordium-contracts.yaml  ethereum.yaml  frontend_ci.yaml  relayer.yaml
concordium_contracts/: .gitignore  README.md  latest.json
concordium_contracts/.github/scripts/: build_all.sh  prepare.sh
concordium_contracts/.github/workflows/: build.yaml
concordium_contracts/bridge-manager/: Cargo.toml
concordium_contracts/bridge-manager/scripts/: grant_role.json  grant_role_bridge.sh
concordium_contracts/bridge-manager/src/: lib.rs
concordium_contracts/cis2-bridgeable/: Cargo.toml
concordium_contracts/cis2-bridgeable/scripts/: balance_of.json  generate_schema.sh  grant_role.json  grant_role.sh  token_metadata.json
concordium_contracts/cis2-bridgeable/src/: lib.rs
concordium_contracts/deploy-scripts/: Cargo.toml  Makefile  README.md
concordium_contracts/deploy-scripts/src/: contracts.rs  deployer.rs  main.rs
ethereum_contracts/: .env.sample  .eslintrc.json  .solhint.json  .solhintignore  DEPLOY.md  FLOWS.md  README.md  ROLES.md  hardhat.config.ts  package-lock.json  package.json
ethereum_contracts/contracts/StateSender/: IStateSender.sol  StateSender.sol  StateSenderProxy.sol
ethereum_contracts/contracts/TokenVault/: ERC20Vault.sol  ERC20VaultProxy.sol  EtherVault.sol  EtherVaultProxy.sol  ITokenVault.sol
ethereum_contracts/contracts/proxy/: ProxyAdmin.sol
ethereum_contracts/contracts/root/: IRootChainManager.sol  RootChainManager.sol  RootChainManagerProxy.sol  RootChainManagerStorage.sol
ethereum_contracts/contracts/test/: MockErc20.sol  MockStateSenderUpgrade.sol
ethereum_contracts/scripts/: deploy_all.ts  deploy_map_erc20.ts  deploy_map_eth.ts  deploy_mock_erc20.ts  deposit_eth.ts  deposit_fake_erc20.ts
ethereum_contracts/test/helpers/: constants.ts  contracts.ts  deployer.ts  log-decoder.ts
ethereum_contracts/test/proxy/: upgrade.test.ts
ethereum_contracts/test/root/: RootChainManager.test.ts  Withdraw.test.ts
ethereum_contracts/typechain-types/: BridgeProxyAdmin.ts  ERC20Vault.ts  ERC20VaultProxy.ts  EtherVault.ts  EtherVaultProxy.ts  IRootChainManager.ts  IStateSender.ts  ITokenVault.ts  MockErc20.ts  MockStateSenderUpgrade.ts  RootChainManager.ts  RootChainManagerProxy.ts  RootChainManagerStorage.ts  StateSender.ts  StateSenderProxy.ts  hardhat.d.ts  index.ts
ethereum_contracts/typechain-types/factories/: BridgeProxyAdmin__factory.ts  ERC1967Proxy__factory.ts  ERC20VaultProxy__factory.ts  ERC20Vault__factory.ts  ERC20__factory.ts  EtherVaultProxy__factory.ts  EtherVault__factory.ts  IRootChainManager__factory.ts  IStateSender__factory.ts  ITokenVault__factory.ts  MockErc20__factory.ts  MockStateSenderUpgrade__factory.ts  ProxyAdmin__factory.ts  RootChainManagerProxy__factory.ts  RootChainManagerStorage__factory.ts  RootChainManager__factory.ts  StateSenderProxy__factory.ts  StateSender__factory.ts  TransparentUpgradeableProxy__factory.ts
frontend/: .env.d.ts  .eslintignore  .eslintrc.json  CHANGELOG.md  Dockerfile  README.md  compose.yaml  next.config.js  package.json  tsconfig.json  typegen.bat  typegen.sh
frontend/pages/: _app.tsx  _document.tsx  index.tsx  transfer-history.tsx
frontend/pages/deposit/: [tx].tsx  index.tsx  overview.tsx
frontend/pages/history/: [direction].tsx
frontend/pages/withdraw/: [tx].tsx  index.tsx  overview.tsx
frontend/public/: openapi.json  swagger-spec.json
frontend/src/api-query/: queries.ts
frontend/src/config/: addresses.ts  ccd-node.ts  connectors.ts  contractNames.ts  network.ts  schemas.ts  transaction-cost.ts  urls.ts
frontend/src/constants/: CacheKeys.ts  DepositStatusMap.ts  WithdrawStatusMap.ts  network.ts  routes.ts
frontend/src/contracts/: use-ccd-contract.ts  use-generate-contract.ts  use-root-manager.ts  use-weth.ts
frontend/src/helpers/: basic.ts  ccd-node.ts  ccdscan.ts  chain-explorer.ts  checkError.ts  checkTransaction.ts  decodeBalance.ts  decodeOperatorOf.ts  detectCcdProvider.ts  fee.ts  hexToBase64.ts  number.ts  parseAmount.ts  parseTxHash.ts  parseWallet.ts  price-usd.ts  string.ts  token-helpers.ts
frontend/src/hooks/: use-ccd-wallet.ts  (+6 more)
frontend/styles/: globals.css
relayer/: CHANGELOG.md  Cargo.toml  README.md  build.rs
relayer/abis/: root-chain-manager.json  state-sender.json
relayer/resources/: db_schema.sql
relayer/scripts/: build.Dockerfile
relayer/src/: aws_secret_manager.rs  concordium_contracts.rs  db.rs  erc20.rs  ethereum.rs  lib.rs  main.rs  merkle.rs  metrics.rs  root_chain_manager.rs  state_sender.rs
(+67 files in other folders)
