[package]
name = "ccdeth_relayer"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
# Generate Ethereum clients in the build script.
generate-client = []
default = []

[dependencies]
anyhow = "1.0"
base64 = "0.13"
chrono = "0.4"
ethabi = "18"
futures = "0.3"
hex = "0.4"
log = "0.4"
num-bigint = "0.4"
rs_merkle = "1.2"
serde = "1.0"
serde_json = "1.0"
sha2 = "0.10"
sha3 = "0.10"
thiserror = "1.0"
url = "2.2"
http = "0.2"
ethers = "1"
ethers-signers = {version = "1", features = ["aws"]}
clap = {version = "4", features = ["derive", "env"]}
tokio = {version = "1.20", features = ["rt-multi-thread", "macros", "sync", "signal"]}
env_logger = "0.9"
tokio-postgres = { version = "^0.7.7", features = ["with-chrono-0_4"] }
tokio-postgres-rustls = "0.9"
rustls = "0.20"
rustls-native-certs = "0.6"
postgres-types = { version = "0.2", features = ["derive"]}
tonic = {version = "0.8", features = ["tls", "tls-roots"]} # Use system trust roots.
reqwest = "0.11"
aws-config = "0.54"
aws-sdk-secretsmanager = "0.24"
prometheus = {version = "0.13", features = ["process"]}
axum = "0.6"
axum-prometheus = { version = "0.3" }
tracing-subscriber = { version = "0.3" }
tracing = { version = "0.1" }
deadpool-postgres = { version = "0.10" }
tower-http = {version = "0.4", features = ["trace", "timeout", "limit", "cors", "fs"]}
utoipa = { version = "3"}

concordium-rust-sdk = { path = "../deps/concordium-rust-sdk/"}

[build-dependencies]
ethers = {version = "1", optional = true}