[package]
edition = "2018"
name = "bridge-manager"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["std"]
std = ["concordium-std/std", "concordium-cis2/std"]

[dependencies]
concordium-cis2 = {version = "2.0.0", features = ["std", "u256_amount"]}
concordium-std = {version = "5.0.0", default-features = false}

[dev-dependencies]
primitive-types = {version = "0.11", default-features = false}

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
codegen-units = 1
opt-level = "s"
