[package]
edition = "2021"
name = "deploy-scripts"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
big_s = "1.0"
chrono = "0.4"
envy = "0.4"
hex = "0.4"
reqwest = {version = "0.11", features = ["json"]}
serde = "1.0"
serde_json = "1.0"
sha2 = "0.10"
thiserror = "1.0"
tokio = {version = "1.18", features = ["rt", "macros"]}
tonic = "0.8"

[dependencies.concordium-contracts-common]
path = "./deps/concordium-rust-sdk/concordium-base/concordium-contracts-common/concordium-contracts-common"
version = "4"

[dependencies.concordium-rust-sdk]
path = "./deps/concordium-rust-sdk"
version = "2"
